Define the card structure and basic styles.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -16,6 +22,33 @@
         <title>Frontend Mentor | Order summary card</title>
     </head>
     <body>
+        <div class="container">
+            <div class="card">
+                <div class="card__image">
+                    <img src="images/illustration-hero.svg" alt="" />
+                </div>
+                <div class="card__header">
+                    <h1 class="card__title">Order Summary</h1>
+                    <p class="card__text">
+                        You can now listen to millions of songs, audiobooks, and podcasts on any
+                        device anywhere you like!
+                    </p>
+                </div>
+                <div class="card__body">
+                    <div class="card__plan">
+                        <img class="plan__icon" src="images/icon-music.svg" alt="" />
+                        <h2 class="plan__title">Annual Plan</h2>
+                        <p class="plan__text">$59.99/year</p>
+                        <a class="plan__link" href="#">Change</a>
+                    </div>
+                    <div class="card__buttons">
+                        <a class="btn btn-blue btn-block" href="#">Proceed to Payment</a>
+                        <a href="#" class="btn btn-white btn-block">Cancel Order</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer>
             <div class="attribution">
                 Challenge by
