--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
                 </div>
                 <div class="card__body">
                     <div class="card__plan">
-                        <img class="plan__icon" src="images/icon-music.svg" alt="" />
-                        <h2 class="plan__title">Annual Plan</h2>
-                        <p class="plan__text">$59.99/year</p>
-                        <a class="plan__link" href="#">Change</a>
+                        <div class="plan">
+                            <img src="images/icon-music.svg" alt="" />
+                            <div class="plan__fee">
+                                <h2 class="plan__title">Annual Plan</h2>
+                                <p class="plan__text">$59.99/year</p>
+                            </div>
+                        </div>
+                        <a href="#">Change</a>
                     </div>
                     <div class="card__buttons">
                         <a class="btn btn-blue btn-block" href="#">Proceed to Payment</a>
-                        <a href="#" class="btn btn-white btn-block">Cancel Order</a>
+                        <a href="#" class="btn btn-white">Cancel Order</a>
                     </div>
                 </div>
             </div>
